--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -51,7 +51,7 @@
 									</button></a>
 							</div>
 							<div class="btn-group">
-								<a href="/deleteall/"><button type="button" class="btn btn-warning">
+								<a href="/deleteall/"><button id="effect" type="button" class="btn btn-warning">
 									<i class="glyphicon glyphicon-trash"></i> DELETE ALL
 								</button></a>
 							</div>
