--- a/todo/static/todo/styles.css
+++ b/todo/static/todo/styles.css
@@ -1,6 +1,11 @@
 body {
-	background: rgba(44, 62, 80, .8);
-	font-family: 'Oswald', 'Futura', sans-serif;
+	/* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#cbe83e+0,2989d8+0,2989d8+0,69f42e+0,2fede9+100 */
+background: #cbe83e; /* Old browsers */
+background: -moz-linear-gradient(left,  #cbe83e 0%, #2989d8 0%, #2989d8 0%, #69f42e 0%, #2fede9 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(left,  #cbe83e 0%,#2989d8 0%,#2989d8 0%,#69f42e 0%,#2fede9 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to right,  #cbe83e 0%,#2989d8 0%,#2989d8 0%,#69f42e 0%,#2fede9 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cbe83e', endColorstr='#2fede9',GradientType=1 ); /* IE6-9 */
+
 }
 #wrapper {
 	margin-top: 10% !important;
